--- a/index.html
+++ b/index.html
@@ -9,12 +9,21 @@
 
 <body>
     <ul>
-        <li style="--i:3"><a href="#">
+        <li style="--i:3"><img src="images/logo.png" alt=""><a href="#">
         <b>Safundrietta</b></a></li>
-        <li style="--i:2"><a href="#"
+        <li style="--i:2"><img src="images/github.png" alt=""><a href="#"
         target="_blank"><b>Github</b></a></li>
-        <li style="--i:1"><a href="#"
+        <li style="--i:1"><img src="images/telegram.png" alt=""><a href="#"
         target="_blank"><b>Telegram</b></a></li>
+    </ul>
+
+    <ul class="second">
+        <li style="--i:3"><img src="images/FB.png" alt=""><a href="#">
+        <b>Facebook</b></a></li>
+        <li style="--i:2"><img src="images/vk.png" alt=""><a href="#"
+        target="_blank"><b>VK</b></a></li>
+        <li style="--i:1"><img src="images/instagram.png" alt=""><a href="#"
+        target="_blank"><b>Instagram</b></a></li>
     </ul>
 </body>
 </html>
